--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,33 +1,43 @@
-@main("Startseite | Mieten") {
+@(a : Int) @main("Startseite | Mieten") {
 
 
+<div class="row">
+	<div class="col-md-7 col-md-offset-3">
+		<h1>Verfügbarkeit prüfen</h1>
+	</div>
+	@if(a == -1){
+	<div class="col-md-7 col-md-offset-3">
+		<h4>
+			Vor dem Mieten <a href="/login">einloggen!</a>
+		</h4>
+	</div>
+	}
+</div>
+
+<form action="checkFahrzeugwahl" method="get" name="formular">
 	<div class="row">
-		<div class="col-md-7 col-md-offset-3">
-			<h1>Verfügbarkeit prüfen</h1>
-		</div>
-	</div>	
+		<div id="boxMieten">
 
-	 <div class="row">
-	 	<div id="boxMieten">
-		<form action="checkFahrzeugwahl" method="get" name="formular">
-            <div class="col-md-3 col-md-offset-3">
-            	
-               		<h3>Abholung</h3>
-	               		<div>
-	               			<select class="selectpicker" data-width="auto" name="abholstation">
-							<option>Konstanz</option>
-							<option>Singen</option>
-							<option>Radolfzell</option>
-							</select>
-						</div>
+			<div class="col-md-3 col-md-offset-3">
 
-						<div>
-							<input class="dateauswahl" type="text" placeholder="Datum" onclick="pickdate()" name="abholdatum" size="29">
-						</div>
+				<h3>Abholung</h3>
+				<div>
+					<select class="selectpicker" data-width="auto" name="abholstation">
+						<option>Konstanz</option>
+						<option>Singen</option>
+						<option>Radolfzell</option>
+					</select>
+				</div>
 
-						<div>
-							<input class="timeauswahl" type="text" placeholder="Uhrzeit" onclick="picktime()" name="abholzeit" size="12" >
-						</div>
+				<div>
+					<input class="dateauswahl" type="text" placeholder="Datum"
+						onclick="pickdate()" name="abholdatum" size="29">
+				</div>
+
+				<div>
+					<input class="timeauswahl" type="text" placeholder="Uhrzeit"
+						onclick="picktime()" name="abholzeit" size="12">
+				</div>
 
 
 
@@ -36,33 +46,30 @@
 			</div>
 			<div class="col-md-2 ">
 				<h3>Rückgabe</h3>
-						<div>
-	               			<select class="selectpicker" data-width="auto" name="rueckgabestation">
-							<option>Konstanz</option>
-							<option>Singen</option>
-							<option>Radolfzell</option>
-							</select>
-						</div>
-						<div>
-							<input class="dateauswahl" type="text" placeholder="Datum" onclick="pickdate()" name="rueckgabedatum" size="29">
-						</div>
-						<div>
-							<input class="timeauswahl" type="text" placeholder="Uhrzeit" onclick="picktime()" name="rueckgabezeit" size="12">
-						</div>
-						
-			 	</div>
-				
-				<div class="row">	
-					<div class="col-md-1 col-md-offset-3">
-						<button id="btn-anfrage" type="submit" class="btn btn-danger">Anfrage starten</button>
-					</div>
+				<div>
+					<select class="selectpicker" data-width="auto"
+						name="rueckgabestation">
+						<option>Konstanz</option>
+						<option>Singen</option>
+						<option>Radolfzell</option>
+					</select>
 				</div>
-		</form>
-			 	
-			
+				<div>
+					<input class="dateauswahl" type="text" placeholder="Datum"
+						onclick="pickdate()" name="rueckgabedatum" size="29">
+				</div>
+				<div>
+					<input class="timeauswahl" type="text" placeholder="Uhrzeit"
+						onclick="picktime()" name="rueckgabezeit" size="12">
+				</div>
+			</div>
 		</div>
-
-				
 	</div>
-
+	<div class="row">
+		<div class="col-md-1 col-md-offset-3">
+			<button id="btn-anfrage" type="submit" class="btn btn-danger">Anfrage
+				starten</button>
+		</div>
+	</div>
+</form>
 }
