--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(a : Int, eingeloggt : Int) @main("Startseite | Mieten") {
+@(eingeloggt : Int, bild1 : String, bild2 : String, bild3 : String) @main("Startseite | Mieten") {
 
 <div class="row">
 	<div class="col-md-1 col-md-offset-8">
@@ -19,12 +19,39 @@
 		<h1>Verfügbarkeit prüfen</h1>
 	
 	</div>
-	@if(a == -1){
+	@if(eingeloggt == 0){
 	<div class="col-md-7 col-md-offset-3">
 		<h4>
 			Vor dem Mieten <a href="/login">einloggen!</a>
 		</h4>
 	</div>
+</div>
+
+	<div class="row">
+	<div class="col-md-7 col-md-offset-3">
+	<!-- Carousel -->
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src=@bild1 >
+    </div>
+    <div class="item">
+      <img src=@bild2>
+    </div>
+    <div class="item">
+      <img src=@bild3>   
+    </div>
+  </div>
+			<!-- Carousel Ende-->
+			</div>
+			</div>
 	}
 </div>
 @if(eingeloggt == 1){
