--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -12,23 +12,20 @@
 </div>
 
 
-
-
+@if(eingeloggt == 0){
 <div class="row">
 	<div class="col-md-7 col-md-offset-3">
-		<h1>Verfügbarkeit prüfen</h1>
-	
+		<h1>Willkommen!</h1>
 	</div>
-	@if(eingeloggt == 0){
 	<div class="col-md-7 col-md-offset-3">
 		<h4>
-			Vor dem Mieten <a href="/login">einloggen!</a>
+			 <a href="/login">Bitte melden Sie sich an!</a>
 		</h4>
 	</div>
 </div>
 
 	<div class="row">
-	<div class="col-md-7 col-md-offset-3">
+	<div class="col-md-6 col-md-offset-3">
 	<!-- Carousel -->
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -55,6 +52,11 @@
 	}
 </div>
 @if(eingeloggt == 1){
+<div class="row">
+	<div class="col-md-7 col-md-offset-3">
+		<h1>Verfügbarkeit prüfen</h1>
+	</div>
+</div>
 <form action="checkFahrzeugwahl" method="get" name="formular">
 	<div class="row">
 		<div id="boxMieten">
